(ID1x) Support column visibility switching, small fixes

--- a/src/custom.css
+++ b/src/custom.css
@@ -263,3 +263,8 @@ html {
 .k-animation-container {
     z-index: 10003
 }
+
+.popuptreeview {
+    font-size: 12px;
+    max-height: 60vh;
+}
